05-Network-Policy/pod-with-network-policy/firefox-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: firefox
  namespace: nginx-ns
  labels:
    app: firefox
spec:
  containers:
  - name: firefox
    image: linuxserver/firefox
    ports:
    - containerPort: 3001
