05-Network-Policy/pod-with-network-policy/np-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-policy
  namespace: dev
spec:
  podSelector:
    matchLabels:
      app: nginx

  policyTypes:
  - Ingress
  - Egress

  ingress:
  - ports:
    - protocol: TCP
      port: 80
